계단정복지도 서버를 EKS cluster로 가져오기

--- a/components/external-dns/external-dns.yaml
+++ b/components/external-dns/external-dns.yaml
@@ -59,6 +59,9 @@ spec:
             - --source=service
             - --source=ingress
             - --domain-filter=api.suhwan.dev # will make ExternalDNS see only the hosted zones matching provided domain, omit to process all available hosted zones
+            - --domain-filter=api.staircrusher.club
+            - --domain-filter=api.test.staircrusher.club
+            - --domain-filter=admin.staircrusher.club
             - --provider=aws
             - --policy=upsert-only # would prevent ExternalDNS from deleting any records, omit to enable full synchronization
             - --aws-zone-type=public # only look at public hosted zones (valid values are public, private or no value for both)
